--- a/Blazor.Wasm.UI/Blazor.Wasm.UI.csproj
+++ b/Blazor.Wasm.UI/Blazor.Wasm.UI.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MatBlazor" Version="2.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
