--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,3 +8,7 @@ pool:
 steps:
 - script: dotnet build
   displayName: 'dotnet build'
+
+- script: dotnet publish -o $(build.artifactStagingDirectory)
+  displayName: 'dotnet publish -o $(build.artifactStagingDirectory)'
+  workingDirectory: $(solutionDir)
