--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,8 @@ steps:
 
 - script: dotnet build
   displayName: 'dotnet build'
-  workingDirectory: $(solutionDir)
+  workingDirectory: $(System.DefaultWorkingDirectory)
 
 - script: dotnet publish -o $(build.artifactStagingDirectory)
   displayName: 'dotnet publish -o $(build.artifactStagingDirectory)'
-  workingDirectory: $(solutionDir)
+  workingDirectory: $(System.DefaultWorkingDirectory)
